projects/instavote/dev/results-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: results 
  labels: 
    role: results
spec:
  selector:
    role: results
  ports:
    - port: 82
      targetPort: 80
      nodePort: 30001
  type: NodePort
